@@ -1,6 +1,7 @@
 package com.kelsonthony.algafood.api.controller;
 
 import java.util.List;
+import java.util.Map;
 
 import javax.validation.Valid;
 
@@ -10,6 +11,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -18,13 +20,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.google.common.collect.ImmutableMap;
 import com.kelsonthony.algafood.api.assembler.PedidoInputDisassembler;
 import com.kelsonthony.algafood.api.assembler.PedidoModelAssembler;
 import com.kelsonthony.algafood.api.assembler.PedidoResumoModelAssembler;
 import com.kelsonthony.algafood.api.model.PedidoModel;
 import com.kelsonthony.algafood.api.model.PedidoResumoModel;
 import com.kelsonthony.algafood.api.model.input.PedidoInput;
+import com.kelsonthony.algafood.api.openapi.controller.PedidoControllerOpenApi;
 import com.kelsonthony.algafood.core.data.PageableTranslator;
 import com.kelsonthony.algafood.domain.exception.NegocioException;
 import com.kelsonthony.algafood.domain.filter.PedidoFilter;
@@ -35,8 +37,8 @@ import com.kelsonthony.algafood.domain.service.EmissaoPedidoService;
 import com.kelsonthony.algafood.infrastructure.repository.spec.PedidoSpecs;
 
 @RestController
-@RequestMapping(value = "/pedidos")
-public class PedidoController {
+@RequestMapping(path = "/pedidos", produces = MediaType.APPLICATION_JSON_VALUE)
+public class PedidoController implements PedidoControllerOpenApi {
 
 	@Autowired
 	private PedidoRepository pedidoRepository;
@@ -71,33 +73,6 @@ public class PedidoController {
 		return pedidosModelPage;
 	}
 
-	/*
-	 * @GetMapping public MappingJacksonValue listar(@RequestParam(required = false)
-	 * String campos){
-	 * 
-	 * List<Pedido> todosPedidos = pedidoRepository.findAll();
-	 * 
-	 * List<PedidoResumoModel> pedidosModel =
-	 * pedidoResumoModelAssembler.toCollectionModel(todosPedidos);
-	 * 
-	 * MappingJacksonValue pedidosWrapper = new MappingJacksonValue(pedidosModel);
-	 * 
-	 * SimpleFilterProvider filtersProvider = new SimpleFilterProvider();
-	 * 
-	 * filtersProvider.addFilter("pedidoFilter",
-	 * SimpleBeanPropertyFilter.serializeAll());
-	 * 
-	 * if(StringUtils.isNotBlank(campos)) {
-	 * filtersProvider.addFilter("pedidoFilter",
-	 * SimpleBeanPropertyFilter.filterOutAllExcept(campos.split(",")));
-	 * 
-	 * }
-	 * 
-	 * pedidosWrapper.setFilters(filtersProvider);
-	 * 
-	 * return pedidosWrapper; }
-	 */
-
 	@GetMapping("/{codigoPedido}")
 	public PedidoModel buscar(@PathVariable String codigoPedido) {
 		Pedido pedido = emissaoPedidoService.buscarOuFalhar(codigoPedido);
@@ -123,7 +98,7 @@ public class PedidoController {
 	}
 	
 	private Pageable traduzirPageable(Pageable apiPageable) {
-		var mapeamento = ImmutableMap.of(
+		var mapeamento = Map.of(
 				"codigo", "codigo",
 				"restaurante.nome", "restaurante.nome",
 				"nomeCliente", "cliente.nome",
